Конец рефакторинга